--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>Ristorante Con Fusion</title>
-</head>
+---
+layout: default
+title: Home
+---
 
 <body>
 
@@ -97,5 +95,3 @@
     </footer>
 
 </body>
-
-</html>
